--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="static/style/common.css">
 </head>
 <body>
 	<div id="app">
-		<h1>{{title}}</h1>
+		<img class="bigpic" src="static/images/ruijie.jpg" alt="">
+		<App></App>
 	</div>
 	<script src="dist/bundle.js"></script>
 </body>
